Apply fix for issue: Information Exposure in server.js

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "express-basic-auth": "^1.2.1", // Added for securing endpoints against information exposure
     "falcor-json-graph": "^1.1.7",
     "falcor-path-syntax": "^0.2.4",
     "falcor-path-utils": "^0.7.5",
